Refactor getting Cookies to Map.copyOf - more modern Java feature.