@@ -1,6 +1,5 @@
 package com.kontomatik.bankScraper.mbank.models;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -11,7 +10,7 @@ public class Cookies {
     }
 
     public Map<String, String> getCookies() {
-        return Collections.unmodifiableMap(cookies);
+        return Map.copyOf(cookies);
     }
 
     public void addCookies(Map<String, String> newCookies) {
